tests/should-fail/function-comparison.ls
f x = 10;

main = f == f;
